--- a/HTML/assets/plugins/parallax-slider/css/parallax-slider.css
+++ b/HTML/assets/plugins/parallax-slider/css/parallax-slider.css
@@ -4,7 +4,7 @@
 	position: relative;
 	margin: 0 auto;
 	overflow: hidden;
-	background: transparent url(../img/bg.jpg) repeat 0% 0%;
+	background-image:url(../img/bg.png);
 	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -2px 1px #fff;
 	-webkit-transition: background-position 1.4s ease-in-out 0.3s;
 	-moz-transition: background-position 1.4s ease-in-out 0.3s;
@@ -55,6 +55,7 @@
 	top: 100px;
 	z-index: 10;
 	padding:0;
+  padding-left: 100px;
 	margin-left:-2%;
 }
 .da-slide h2 i {
