--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,9 +2,13 @@
 /*red: #bd1127 */
 /*yellow: #f9a618; */
 
+.container{
+  margin-left: 50px;
+}
+
 .left-menu {
   position: absolute;
-  padding-left: 5px;
+  margin-left: 50px;
   margin-top: 100px;
   top: 100px;
   width: 200px;
