--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@
 .navbar-default .navbar-toggle:hover, 
 .navbar-default .navbar-toggle:focus {
 	background: #bd1127;
+	padding: 6px 10px 2px;
 }
 
 .navbar-default .navbar-toggle {
