have all be same shape then rotate

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,11 @@
   color: #eaf9e2;
 }
 
+.left-menu-item{
+  padding-top: 20px;
+  cursor: pointer;
+}
+
 #three-canvas{
   position:fixed;
   width: 100%;
