--- a/partials/creations.html
+++ b/partials/creations.html
@@ -1,3 +1,4 @@
 <div id="overview" class="left-menu">
-  We create Virtual Products, Virtual Environments, Virtual Interfaces, Virtually Anything!
+  <div>We create Virtual Products, Virtual Environments, Virtual Interfaces, Virtually Anything!</div>
+  <div class="left-menu-item" id="futurego" ng-click="display()">Futurgo</div>
 </div>
