frames go back on route change

--- a/partials/team.html
+++ b/partials/team.html
@@ -3,4 +3,7 @@
 
   Awesome visual design skills, great programming chops, and an uncanny sense of what the client needs.
 
+  <div class="left-menu-item" id="tony" ng-click="display($event)">Tony</div>
+  <div class="left-menu-item" id="eric" ng-click="display($event)">Eric</div>
+
 </div>
