made syncing of html and 3d boxes better. Made text look a lot cleaner and less pixellated. Both by moving frame a bit further away from the camera

--- a/partials/team.html
+++ b/partials/team.html
@@ -3,7 +3,8 @@
 
   Awesome visual design skills, great programming chops, and an uncanny sense of what the client needs.
 
-  <div class="left-menu-item" id="tony" ng-click="display($event)">Tony</div>
-  <div class="left-menu-item" id="eric" ng-click="display($event)">Eric</div>
+  <div class="left-menu-item" id="tony" ng-click="display($event)">Tony Parisi</div>
+  <div class="left-menu-item" id="tc" ng-click="display($event)">TC Chang</div>
+  <div class="left-menu-item" id="eric" ng-click="display($event)">Eric Levin</div>
 
 </div>
