--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,6 +41,11 @@
   font-size: 20px;
 }
 
+.panel iframe{
+  height:100%;
+  width: 100%;
+}
+
 .navbar-default .navbar-toggle{
   border: 2px solid #f9a618;
   border-color: #f9a618;
