--- a/partials/creations.html
+++ b/partials/creations.html
@@ -1,5 +1,5 @@
 <div id="overview" class="left-menu">
   <div>We create Virtual Products, Virtual Environments, Virtual Interfaces, Virtually Anything!</div>
   <div class="left-menu-item" id="futurego" ng-click="display($event)">Futurgo</div>
-  <div class="left-menu-item" id="car" ng-click="display($event)">Car</div>
+  <div class="left-menu-item" id="razer" ng-click="display($event)">Razer</div>
 </div>
