added sass for preprocessing

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -3,6 +3,15 @@
 /*yellow: #f9a618; */
 /*ivory: #eaf9e2; */
 
+$left-menu-color: #eaf9e2;
+$logo-color: #f9a618;
+$header-tabs-color: #bd1127;
+$underline-color: #141615;
+
+.wrapper{
+  font-family: "Nunito";
+}
+
 .container{
   margin-left: 50px;
 }
