--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,2 +1,7 @@
+$left-menu-color: #eaf9e2;
+$logo-color: #f9a618;
+$header-tabs-color: #bd1127;
+$underline-color: #141615;
+
 @import 'navbar';
 @import 'custom';
