making boxes dynamic

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -47,9 +47,9 @@
   font-size: 20px;
 }
 
-.panel iframe{
-  height:100%;
-  width: 100%;
+.iframePanel iframe{
+  width:100%;
+  height: 100%;
 }
 
 .navbar-default .navbar-toggle{
