--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,9 +185,9 @@
   padding: 20px;
   font-size: 20px; }
 
-.panel iframe {
-  height: 100%;
-  width: 100%; }
+.iframePanel iframe {
+  width: 100%;
+  height: 100%; }
 
 .navbar-default .navbar-toggle {
   border: 2px solid #f9a618;
