--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -7,6 +7,7 @@
 
 .wrapper{
   font-family: "Nunito";
+  overflow:hidden;
 }
 
 .container{
@@ -39,12 +40,12 @@
 }
 
 .panel{
-  // display: none;
+  display: none;
   position: fixed;
   opacity: 0.9;
   background: $left-menu-color;
   padding: 20px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .iframePanel iframe{
