made frame size dynamic based on html element size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,6 +150,9 @@
 /*red: #bd1127 */
 /*yellow: #f9a618; */
 /*ivory: #eaf9e2; */
+body {
+  overflow: hidden; }
+
 .wrapper {
   font-family: "Nunito";
   overflow: hidden; }
