animation to cam now works no matter the angle the camera is rotated in

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,5 @@
 $left-menu-color: #eaf9e2;
+$canvas-background-color: #9cafb3;
 $logo-color: #f9a618;
 $header-tabs-color: #bd1127;
 $underline-color: #141615;
