--- a/partials/team.html
+++ b/partials/team.html
@@ -1,4 +1,4 @@
-<div id="overview" class="left-menu">
+<div id="overview">
   Our principals have deep experience in real-time 3D graphics, video games, interactive web development and virtual reality. 
 
   Awesome visual design skills, great programming chops, and an uncanny sense of what the client needs.
