--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,12 +162,13 @@ body {
 
 .left-menu {
   position: absolute;
-  margin-left: 50px;
-  margin-top: 100px;
-  top: 100px;
   width: 200px;
+  padding-top: 100px;
+  padding-left: 50px;
   z-index: 100;
-  color: #eaf9e2; }
+  color: #eaf9e2;
+  background-color: rgba(156, 170, 179, 0.9);
+  height: 100%; }
 
 .left-menu-item {
   padding-top: 20px;
