--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -3,6 +3,8 @@
 /*yellow: #f9a618; */
 /*ivory: #eaf9e2; */
 
+$left-menu-width: 200px;
+
 body{
   overflow: hidden;
 }
@@ -18,13 +20,15 @@ body{
 
 .left-menu {
   position: absolute;
-  margin-left: 50px;
-  margin-top: 100px;
-  top: 100px;
-  width: 200px;
+  width: $left-menu-width;
+  padding-top: 100px;
+  padding-left: 50px;
   z-index: 100;
   color: $left-menu-color;
+  background-color: rgba(156, 170, 179, 0.9);
+  height: 100%;
 }
+
 
 .left-menu-item{
   padding-top: 20px;
@@ -35,6 +39,7 @@ body{
   position:fixed;
   width: 100%;
   height: 100%;
+  // margin-left: $left-menu-width;
 }
 #logo-header{
   position: absolute;
