added seo keywords, another team member, and sped up animations

--- a/partials/team.html
+++ b/partials/team.html
@@ -1,10 +1,11 @@
-<div id="overview">
+<div>
   Our principals have deep experience in real-time 3D graphics, video games, interactive web development and virtual reality. 
 
   Awesome visual design skills, great programming chops, and an uncanny sense of what the client needs.
 
-  <div class="left-menu-item" id="tony" ng-click="display($event)">Tony Parisi</div>
-  <div class="left-menu-item" id="tc" ng-click="display($event)">TC Chang</div>
-  <div class="left-menu-item" id="eric" ng-click="display($event)">Eric Levin</div>
+  <div class="left-menu-item" id="tony" ng-click="display($event)">Tony Parisi: Founder/Architect</div>
+  <div class="left-menu-item" id="tc" ng-click="display($event)">TC Chang: Founder/Creative Director</div>
+  <div class="left-menu-item" id="dave" ng-click="display($event)">Dave Arendash: Technical Director</div>
+  <div class="left-menu-item" id="eric" ng-click="display($event)">Eric Levin: Creative Coder</div>
 
 </div>
