--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -29,6 +29,11 @@ body{
   height: 100%;
 }
 
+.statueText{
+  color: $header-tabs-color;
+  font-size: 200px;
+}
+
 
 .left-menu-item{
   padding-top: 20px;
