--- a/partials/tech.html
+++ b/partials/tech.html
@@ -1,4 +1,4 @@
-<divß>
+<div>
   Something here about Vizi platform - client side framework, content creation pipeline and technologies for deploying.
 
   We also work with these technologies to build a complete solution.
