--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -36,6 +36,7 @@ body{
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
+  cursor: pointer;
 }
 
 
