--- a/partials/tech.html
+++ b/partials/tech.html
@@ -1,6 +1,23 @@
 <div>
-  Something here about Vizi platform - client side framework, content creation pipeline and technologies for deploying.
+ <p>Vizi taps into the awesome 3D power of HTML5, iOS, Android and new immersive hardware platforms to create unique experiences for our customers.</p>
 
-  We also work with these technologies to build a complete solution.
+ <p>Our technology toolbox includes:</p>
+
+<p>
+ HTML5,
+ WebGL,
+ CSS3,
+ Web Audio,
+ WebRTC,
+ Unity 3D,
+ Oculus Rift,
+ Leap Motion
+</p>
+
+<p>
+  Vizi has developed its own WebGL application stack to power our projects.  The Vizi tool set is available on Github at <a href="https://github.com/tparisi/vizi">https://github.com/tparisi/vizi</a>
+</p>
+
+ We also work with leading tools and libraries including Verold, Goo, Ludei CocoonJS and Uno.
 
 </div>
