--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,7 +205,10 @@ body {
   opacity: 0.9;
   background: #eaf9e2;
   padding: 20px;
-  font-size: 50px; }
+  font-size: 40px; }
+  .panel img {
+    height: 100%;
+    width: 100%; }
 
 .iframePanel iframe {
   width: 100%;
