--- a/partials/about.html
+++ b/partials/about.html
@@ -1,3 +1,3 @@
 <div>
-  Vizi {{name}} is using the awesome power of virtual reality to build the visual web - engaging, emotional and entertaining experiences for the desktop, mobile, Internet of Things and immersive virtual reality devices - powered by a breakthrough technology platform and a multidisciplinary team with decades of experience in delivering visual products.
+  Vizi creates virtual experiences - emotional and engaging 3D content for web, mobile, Internet of Things and immersive devices - powered by cutting-edge technologies and a multidisciplinary team with decades of experience in delivering visual products.
 </div>
