--- a/partials/creations.html
+++ b/partials/creations.html
@@ -1,5 +1,13 @@
 <div>
-  <div>We create Virtual Products, Virtual Environments, Virtual Interfaces, Virtually Anything!</div>
-  <div class="left-menu-item" id="futurego" ng-click="display($event)">Futurgo</div>
-  <div class="left-menu-item" id="razer" ng-click="display($event)">Razer</div>
+  <p>Vizi takes an integrated, multidisciplinary approach to our projects. Every project begins by looking at business requirements first, and then technology in service of that. From there, we will iteratively design and develop a solution to fit your needs and budget, using lean development techniques. And we keep our clients involved in the process every step of the way.
+  </p>
+
+  <p>Our clients include the industry’s top technology companies, online retailers and interactive agencies creating virtual shopping application, custom 3D printing interfaces and rich interactive social experiences.
+  </p>
 </div>
+
+<div class="left-menu-item" id="futurgo" ng-click="display($event)">Futurgo</div>
+<div class="left-menu-item" id="razer" ng-click="display($event)">Razer</div>
+<div class="left-menu-item" id="tcho" ng-click="display($event)">TCHO</div>
+<div class="left-menu-item" id="castle" ng-click="display($event)">Castle</div>
+<div class="left-menu-item" id="heart" ng-click="display($event)">Heart</div>
