--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,10 @@
 /*yellow: #f9a618; */
 /*ivory: #eaf9e2; */
 a {
-  text-decoration: none; }
+  text-decoration: none !important;
+  color: #bd1127; }
+  a:hover {
+    color: #141615; }
 
 body {
   overflow: hidden; }
@@ -174,7 +177,6 @@ body {
   height: 100%; }
 
 #three-canvas .statueText {
-  color: #bd1127;
   font-size: 90px;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -183,8 +185,6 @@ body {
   cursor: pointer;
   text-transform: uppercase;
   text-decoration: none; }
-  #three-canvas .statueText:hover {
-    color: #141615; }
 
 .left-menu-item {
   padding-top: 20px;
@@ -205,10 +205,12 @@ body {
   opacity: 0.9;
   background: #eaf9e2;
   padding: 20px;
-  font-size: 40px; }
+  font-size: 34px; }
   .panel img {
-    height: 100%;
+    height: 70%;
     width: 100%; }
+  .panel a {
+    text-align: center; }
 
 .iframePanel iframe {
   width: 100%;
