--- a/partials/creations.html
+++ b/partials/creations.html
@@ -9,5 +9,7 @@
 <div class="left-menu-item" id="futurgo" ng-click="display($event)">Futurgo</div>
 <div class="left-menu-item" id="razer" ng-click="display($event)">Razer</div>
 <div class="left-menu-item" id="tcho" ng-click="display($event)">TCHO</div>
-<div class="left-menu-item" id="castle" ng-click="display($event)">Castle</div>
+<div class="left-menu-item" id="holiday" ng-click="display($event)">Holiday</div>
 <div class="left-menu-item" id="heart" ng-click="display($event)">Heart</div>
+<div class="left-menu-item" id="garden" ng-click="display($event)">Garden</div>
+<div class="left-menu-item" id="castle" ng-click="display($event)">Castle</div>
