--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -34,6 +34,7 @@ body{
   color: $left-menu-color;
   background-color: rgba(156, 173, 179, 0.9);
   height: 100%;
+  font-size: 12px;
 }
 
 #three-canvas{
