--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,7 +174,8 @@ body {
   z-index: 100;
   color: #eaf9e2;
   background-color: rgba(156, 173, 179, 0.9);
-  height: 100%; }
+  height: 100%;
+  font-size: 12px; }
 
 #three-canvas .statueText {
   font-size: 90px;
