--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,7 +202,7 @@ body {
 
 .panel {
   display: none;
-  position: fixed;
+  position: absolute;
   opacity: 0.9;
   background: #eaf9e2;
   padding: 20px;
