pushed updated team copy

--- a/partials/team.html
+++ b/partials/team.html
@@ -1,7 +1,6 @@
 <div>
-  Our principals have deep experience in real-time 3D graphics, video games, interactive web development and virtual reality. 
+ Vizi’s principals have decades of combined experience in real-time 3D graphics, video games, web application development, virtual reality, architecture, and visual design. 
 
-  Awesome visual design skills, great programming chops, and an uncanny sense of what the client needs.
 
   <div class="left-menu-item" id="tony" ng-click="display($event)">Tony Parisi: Founder/Architect</div>
   <div class="left-menu-item" id="tc" ng-click="display($event)">TC Chang: Founder/Creative Director</div>
