added target blanks to links that were missing them

--- a/partials/tech.html
+++ b/partials/tech.html
@@ -15,7 +15,7 @@
 </p>
 
 <p>
-  Vizi has developed its own WebGL application stack to power our projects.  The Vizi tool set is available on Github at <a href="https://github.com/tparisi/vizi">https://github.com/tparisi/vizi</a>
+  Vizi has developed its own WebGL application stack to power our projects.  The Vizi tool set is available on Github at <a href="https://github.com/tparisi/vizi" target="blank">https://github.com/tparisi/vizi</a>
 </p>
 
  We also work with leading tools and libraries including Verold, Goo, Ludei CocoonJS and Uno.
