--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,3 +1,3 @@
 <div> 
-  <a href="mailto:info@vizi.gl">Contact us</a> today to see if Vizi can help with your project.
+  <a href="mailto:info@vizi.gl?subject=Request For Information">Contact us</a> today to see if Vizi can help with your project.
 </div>
