--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,7 @@ body {
   font-size: 12px; }
 
 #three-canvas {
-  margin-left: 200px; }
+  left: 200px; }
   #three-canvas .statueText {
     font-size: 90px;
     backface-visibility: hidden;
