--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,5 +4,8 @@ $logo-color: #f9a618;
 $header-tabs-color: #bd1127;
 $underline-color: #141615;
 
+$animation-time: 1.5s;
+
 @import 'navbar';
 @import 'custom';
+@import 'animations';
