--- a/partials/creations.html
+++ b/partials/creations.html
@@ -1,4 +1,4 @@
-<div>
+<div class="menu-item">
   <p>Vizi takes an integrated, multidisciplinary approach to our projects. Every project begins by looking at business requirements first, and then technology in service of that. From there, we will iteratively design and develop a solution to fit your needs and budget, using lean development techniques. And we keep our clients involved in the process every step of the way.
   </p>
 
