--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -30,14 +30,21 @@ body{
   width: $left-menu-width;
   padding-top: 100px;
   padding-left: 25px;
-  z-index: 100;
+  // z-index: 100;
+  height: 100%;
   color: $left-menu-color;
   background-color: rgba(156, 173, 179, 0.9);
-  height: 100%;
   font-size: 12px;
+  margin: 0;
+}
+
+.left-menu-group{
+  position: absolute;
+  top: 100px;
 }
 
 #three-canvas{
+  z-index: 10000;
   position: absolute;
   left: $left-menu-width;
 
