--- a/partials/tech.html
+++ b/partials/tech.html
@@ -1,23 +1,22 @@
-<div>
- <p>Vizi taps into the awesome 3D power of HTML5, iOS, Android and new immersive hardware platforms to create unique experiences for our customers.</p>
+<div class="tech-menu">
+  <p>Vizi taps into the awesome 3D power of HTML5, iOS, Android and new immersive hardware platforms to create unique experiences for our customers.</p>
 
- <p>Our technology toolbox includes:</p>
+  <p>Our technology toolbox includes:</p>
 
-<p>
- HTML5,
- WebGL,
- CSS3,
- Web Audio,
- WebRTC,
- Unity 3D,
- Oculus Rift,
- Leap Motion
-</p>
+  <ul rn-carousel rn-carousel-auto-slide="3">
+   <li>HTML5</li>
+   <li>WebGL</li>
+   <li>CSS3</li>
+   <li>Web Audio</li>
+   <li>WebRTC</li>
+   <li>Unity 3D</li>
+   <li>Oculus Rift</li>
+   <li>Leap Motion</li>
+  </ul>
 
-<p>
-  Vizi has developed its own WebGL application stack to power our projects.  The Vizi tool set is available on Github at <a href="https://github.com/tparisi/vizi" target="blank">https://github.com/tparisi/vizi</a>
-</p>
+  <br>
 
- We also work with leading tools and libraries including Verold, Goo, Ludei CocoonJS and Uno.
+  <p> Vizi has developed its own WebGL application stack to power our projects.  The Vizi tool set is available on Github at <a href="https://github.com/tparisi/vizi" target="blank">https://github.com/tparisi/vizi</a></p>
+  <p>We also work with leading tools and libraries including Verold, Goo, Ludei, CocoonJS and Uno. </p>
 
 </div>
