--- a/partials/about.html
+++ b/partials/about.html
@@ -1,3 +1,3 @@
 <div>
-  Vizi creates virtual experiences - emotional and engaging 3D content for web, mobile, Internet of Things and immersive devices - powered by cutting-edge technologies and a multidisciplinary team with decades of experience in delivering visual products.
+  TEST Vizi creates virtual experiences - emotional and engaging 3D content for web, mobile, Internet of Things and immersive devices - powered by cutting-edge technologies and a multidisciplinary team with decades of experience in delivering visual products.
 </div>
