left menu backgound color same as canvas background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,7 @@ body {
   padding-left: 25px;
   height: 100%;
   color: #eaf9e2;
-  background-color: rgba(156, 173, 179, 0.9);
+  background-color: #9cafb3;
   font-size: 12px;
   margin: 0; }
 
