--- a/partials/team.html
+++ b/partials/team.html
@@ -6,8 +6,8 @@
   <div class="left-menu-item" id="tc" ng-click="display($event)">TC Chang: Founder/Creative Director</div>
   <div class="left-menu-item" id="dave" ng-click="display($event)">Dave Arendash: Technical Director</div>
   <div class="left-menu-item" id="dusan" ng-click="display($event)">Dusan Bosnak: Technical Artist</div>
-  <div class="left-menu-item" id="simo" ng-click="display($event)">Marina Berlin: Experience Designer</div>
-  <div class="left-menu-item" id="marina" ng-click="display($event)">Simo Santavirta: Creative Coder</div>
+  <div class="left-menu-item" id="marina" ng-click="display($event)">Marina Berlin: Experience Designer</div>
+  <div class="left-menu-item" id="simo" ng-click="display($event)">Simo Santavirta: Creative Coder</div>
   <div class="left-menu-item" id="eric" ng-click="display($event)">Eric Levin: Creative Coder</div>
 
 </div>
